# financial-fraud-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: keep-alive.yml  quality.yml
.streamlit/: config.toml
config/: project.json
dashboard/: app.py
dashboard/data/: analyst_summary.csv  capacity_summary.csv  model_summary.csv  monthly_summary.csv  review_model_only.csv  review_strategy_summary.csv
docs/: ALERT_REVIEW.md  DATA_SOURCE.md  METHODOLOGY.md
notebooks/: 01_data_source_and_quality.ipynb  02_fraud_pattern_analysis.ipynb  03_feature_policy_and_preparation.ipynb  04_model_baselines.ipynb  05_model_comparison.ipynb  06_threshold_and_capacity.ipynb  07_analyst_review.ipynb  08_stability_fairness_and_findings.ipynb
reports/: data_audit.json  model_metrics.json  monitoring_checks.json  review_strategy_metrics.json
scripts/: build_notebooks.py  evaluate_review_strategies.py  generate_figures.py  prepare_dashboard_data.py  run_data_audit.py  run_monitoring_checks.py  train_baselines.py
sql/: monitoring_views.sql
src/fraud_detection/: __init__.py  assignment.py  data_io.py  evaluation.py  features.py  modelling.py  validation.py
tests/: test_assignment.py  test_data_io.py  test_evaluation.py  test_modelling.py  test_monitoring_sql.py  test_validation.py
